--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>EPAM App Portal DevBox</title>
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700,600" rel="stylesheet" type="text/css">
-	<!--[if lt IE 10]><link href="css/fonts.css" type="text/css" rel="stylesheet" /><![endif]-->
+	<!--[if lt IE 10]>
+    <link href="css/fonts.css" type="text/css" rel="stylesheet"/><![endif]-->
     <link rel="icon" href="img/favicon.png" type="image/x-icon"/>
     <link href="css/jquery-ui-1.9.2.custom.css" rel="stylesheet" />
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 	<link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <!--[if IE 9]><link href="css/ie9.css" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if IE 9]>
+    <link href="css/ie9.css" rel="stylesheet" type="text/css"/><![endif]-->
     <script src="https://www.appsngen.com/application-viewer/gadgets/js/appstore.api.js?c=1"></script>
 	<script src="js/dependencies/jquery/jquery.js"></script>
     <script src="js/dependencies/jquery-color/jquery.color.js"></script>
