--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,8 @@
 		<title>Login</title>
 
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700,600,400italic' rel='stylesheet' type='text/css' />
-		<!--[if lt IE 10]><link href="css/fonts.css" type="text/css" rel="stylesheet" /><![endif]-->
+		<!--[if lt IE 10]>
+        <link href="css/fonts.css" type="text/css" rel="stylesheet"/><![endif]-->
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/sign-on-forms.css" type="text/css" rel="stylesheet" />
 		<!--[if lt IE 9]><script src="js/dependencies/html5shiv/html5shiv.js"></script><![endif]-->
