hide dynamic heigth settings button;

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
 	<link href="css/bootstrap-responsive.css" rel="stylesheet">
     <!--[if IE 9]>
     <link href="css/ie9.css" rel="stylesheet" type="text/css"/><![endif]-->
-    <script src="https://www.appsngen.com/application-viewer/gadgets/js/appstore.api.js?c=1"></script>
+    <!--<script src="https://www.appsngen.com/application-viewer/gadgets/js/appstore.api.js?c=1"></script>-->
 	<script src="js/dependencies/jquery/jquery.js"></script>
     <script src="js/dependencies/jquery-color/jquery.color.js"></script>
     <script src="js/dependencies/jquery-ui/jquery-ui.js"></script>
@@ -75,7 +75,7 @@
 						<ul id="appList" class="nav nav-pills nav-stacked">
 						</ul>
 					</div>
-					<div>
+					<div style="display: none;">
 						<h4>Settings</h4>
 						<label class="checkbox">
 							<input id="dynamicHeight" type="checkbox"> Dynamic height.
