move widgets config to server config; add local widget samples;

--- a/views/index.html
+++ b/views/index.html
@@ -15,11 +15,10 @@
     <link href="css/ie9.css" rel="stylesheet" type="text/css"/><![endif]-->
     <script src="<%%= viewerHost %%>/content/js/appsngen.container.api.js"></script>
 	<script src="js/dependencies/jquery/jquery.js"></script>
-    <script src="js/dependencies/jquery-color/jquery.color.js"></script>
     <script src="js/dependencies/jquery-ui/jquery-ui.js"></script>
     <script src="js/dependencies/jquery.cookie/jquery.cookie.js"></script>
     <script src="js/dependencies/bootstrap-css/bootstrap.min.js"></script>
-    <script src="js/dependencies/underscore/underscore-min.js"></script>
+    <script src="js/dependencies/underscore/underscore.js"></script>
     <script src="js/dependencies/requirejs/require.js"></script>
     <script src="js/devbox.container.js"></script>
 	<script>
@@ -75,7 +74,7 @@
 						<ul id="appList" class="nav nav-pills nav-stacked">
 						</ul>
 					</div>
-					<div style="">
+					<div style="display: none;">
 						<h4>Settings</h4>
 						<label class="checkbox">
 							<input id="dynamicHeight" type="checkbox"> Dynamic height.
