--- a/views/login.html
+++ b/views/login.html
@@ -33,10 +33,10 @@
             <fieldset>
               <label for="username">Username:</label>
               <br>
-              <input id="username" type="text" value="<%%= name %%>"/>
+              <input id="username" type="text" value=""/>
               <label for="password">Password:</label>
               <br>
-              <input id="password" type="password" value="<%%= password %%>"/>
+              <input id="password" type="password" value=""/>
               <button type="button" class="btn btn-blue">ok</button>
               <span class="additional"><input id="remember" type="checkbox" />
               <label for="remember">Remember me</label></span>
