--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 	<link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/waiting.css" rel="stylesheet">
     <!--[if IE 9]>
     <link href="css/ie9.css" rel="stylesheet" type="text/css"/><![endif]-->
 	<script src="js/dependencies/jquery/jquery.js"></script>
@@ -125,6 +126,23 @@
         <footer>
             <p>© EPAM <script>document.write(new Date().getFullYear())</script></p>
         </footer>
+    </div>
+    <div id="viewerWaiting" class="global-waiting" >
+        <div class="waiter">
+            <div class='bar-1'></div>
+            <div class='bar-2'></div>
+            <div class='bar-3'></div>
+            <div class='bar-4'></div>
+            <div class='bar-5'></div>
+            <div class='bar-6'></div>
+            <div class='bar-7'></div>
+            <div class='bar-8'></div>
+            <div class='bar-9'></div>
+            <div class='bar-10'></div>
+            <div class='bar-11'></div>
+            <div class='bar-12'></div>
+        </div>
+        <div class="waiting-text">Appsngen local environment is starting...</div>
     </div>
 
     <!-- underscore templates-->
